# AI-Shell

./: README.md  ai-shell.py  pyproject.toml
ai_shell/: cli.py  config.py  history.py  openai_client.py  utils.py
ai_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_config.py  test_history.py
